# SanskritEval

./: .env.example  .gitignore  LICENSE  Makefile  PHASE4_SUMMARY.md  PROGRESS_REPORT.md  QUICKSTART.md  README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt
data/benchmarks/: ANNOTATION_GUIDE.md
data/raw/: .gitkeep  DATA_SOURCES.md  README.md
docs/: PHASE1_NORMALIZATION.md  PHASE2_SANDHI.md  PHASE3_MORPHOLOGY.md  PHASE4_EVALUATION.md  PHASE5_INTERPRETABILITY.md
reports/: sanskriteval_report.txt
results/: morphology_error_cases.json  morphology_results.json  probing_results.json  sandhi_results.json
scripts/: convert_gita_csv.py  evaluate_morphology.py  evaluate_sandhi.py  generate_mock_probing.py  generate_morph_data.py  generate_plots.py  generate_report.py  generate_report_v2.py  generate_sandhi_data.py  normalize_data.py  plot_probing.py  probe_layers.py  run_benchmark.py  test_text_processing.py
src/sanskriteval/: __init__.py
src/sanskriteval/data/: __init__.py  contrast_sets.py  morphology.py  normalizer.py  sandhi.py
src/sanskriteval/metrics/: __init__.py  morphology_metrics.py  sandhi_metrics.py
src/sanskriteval/models/: __init__.py  base.py  probing.py  rule_based.py  transformers_models.py
src/sanskriteval/utils/: __init__.py  config.py  logging.py  text_processing.py
